[package]
name = "bellande_motion_probability"
version = "0.1.1"
edition = "2021"
authors = ["Bellande Robotics Sensors Research Innovation Center"]
description = "The Bellande Motion Probability algorithm calculates particle movement probabilities using Bellande distributions for enhanced motion estimation"
license = "GPL-3.0-or-later"
repository = "https://github.com/Robotics-Sensors/bellande_motion_probability"
documentation = "https://bellande-robotics-sensors-research-innovation-center.org/api/bellande_motion_probability"
homepage = "https://bellande-robotics-sensors-research-innovation-center.org"
readme = "README.md"
keywords = ["robotics", "motion-planning", "probability", "particle-filter", "state-estimation"]
categories = ["science::robotics", "algorithms", "mathematics", "simulation"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
rand = "0.8"
nalgebra = "0.32"
num-traits = "0.2"

[lib]
name = "bellande_motion_probability"
path = "src/bellande_motion_probability.rs"
